--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Release history for Dist-Zilla-Plugin-GitFlow
 
 {{ $NEXT }}
+    - fix module dependency
 
 0.004     2011-06-16 15:12:58 Asia/Seoul
     - add plugin bundle to support one-line configuration
